force-app/main/default/objects/Error_Log__c/fields/Error_Type__c.field-meta.xml
<CustomField>
    <fullName>Error_Type__c</fullName>
    <description>The type of exception that was thrown</description>
    <inlineHelpText>The exception type (e.g., DmlException, QueryException, etc.).</inlineHelpText>
    <label>Error Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>