force-app/main/default/objects/Error_Log__c/fields/Method_Name__c.field-meta.xml
<CustomField>
    <fullName>Method_Name__c</fullName>
    <description>Name of the method where the error occurred</description>
    <inlineHelpText>The method name where the error was thrown.</inlineHelpText>
    <label>Method Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>