force-app/main/default/objects/Error_Log__c/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>Date and time when the error occurred</description>
    <inlineHelpText>The exact date and time when the error was logged.</inlineHelpText>
    <label>Timestamp</label>
    <type>DateTime</type>
</CustomField>